2003-03-13  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* general/Sets.hs (domSetFM): added

	* general/FiniteMaps.hs (domFM): added
	(imageFM): added

	* admin/BaseVersion.hs (versnum): 0.25.0

2003-02-12  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* general/UNames.hs: we derive `Show Name' explicitly to print the
	number only

2003-02-05  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* general/FileOps.hs (mktemp): added

2003-02-01  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* ../common.mk: I wasn't careful when removing the ability (for
	the user) to invoke make in the part directories and hence the
	ability to check dependencies in these directories.  As a result,
	recursive invocations of make tried to check dependencies in part
	directories and erroneously decided that the target is alreasy up
	to date.  Now the object file are removed before descending into
	the recursive make.

	* ../common.mk (gendepend): remove $(DEPEND) first

	* admin/BaseVersion.hs (versnum): 0.24.3

2002-09-16  Manuel M T Chakravarty  <chak@AttitudeAdjuster>

	* Makefile (libctk.o): generating library for GHCi

2002-09-06  Manuel M T Chakravarty  <chak@AttitudeAdjuster>

	* Makefile (OBJS): excluded state/DynArrays.o from the target
	objects for nhc98 (as it chokes on that module)

2002-05-16  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* changed name if base package to `ctk' to not clash with GHC's
	new package naming scheme

	* admin/BaseVersion.hs (versnum): 0.24.2

2002-03-22  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* ../configure.in: test for availability of the `posix' package
	made more reliable
	
	* admin/BaseVersion.hs (versnum): 0.24.1

2002-03-12  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* Makefile: revised to new build system

	* admin/BaseVersion.hs (versnum): 0.24.0

2002-03-06  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* general/Sets.hs (isSuperSet): cut'n'pasto

2002-03-05  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>
