@@ -51,7 +51,7 @@ AC_ARG_ENABLE(add_package,
 
 dnl Select a specific Haskell compiler and/or flags.
 AC_ARG_WITH(hc, 
-            [  --with-hc=HC            use Haskell compiler HC (full path required)],
+            [  --with-hc=HC            use Haskell compiler HC],
 	    [HC=$withval])
 AC_ARG_WITH(hcflags, 
             [  --with-hcflags=HCFLAGS  specify flags for the Haskell compiler],
@@ -100,8 +100,7 @@ dnl (greps through the usage info - not very nice...)
 $LNDIR 2>&1 | grep silent >/dev/null && LNDIR="$LNDIR -silent"
 
 dnl Haskell compiler; currently ghc 4.08 upwards & nhc98 1.14
-dnl (The next command is not executed, if $HC is already set.)
-AC_PATH_PROGS(HC, ghc nhc98)
+AC_PATH_PROGS(HC, $HC ghc nhc98)
 if test -z "$HC"; then
  AC_MSG_ERROR([Could not find a Haskell compiler!
 Currently supported are ghc 4.08 upwards & nhc98 1.14.
