@@ -1,3 +1,14 @@
+2003-06-10  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>
+
+	* ../mk/common.mk (MKDEPENDFILES): defined ghc6
+
+	* syntax/Makefile (RANK2): defined ghc6
+
+	* sysdep/Makefile (SRCS): defined SysDepGHC6.hs as an alias for
+	SysDepGHC4.hs
+
+	* admin/BaseVersion.hs (versnum): 0.25.1
+
 2003-03-13  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>
 
 	* general/Sets.hs (domSetFM): added
